# anoma-pa-solana-client

./: .gitignore  Cargo.toml  PA_COMMIT.txt  README.md  REQUIREMENTS.md
.github/workflows/: ci.yml
fixtures/: wrap_message_fixture.json
idl/: README.md  block_time_forwarder.json  protocol_adapter.json  spl_token_forwarder.json  test_forwarder.json
rust/: Cargo.toml
rust/src/: accounts.rs  ata.rs  constants.rs  discriminator.rs  external_call.rs  forwarder.rs  instructions.rs  lib.rs  merkle.rs  pda.rs  program_ids.rs  wallet_keyring.rs  wrap_message.rs
rust/tests/: cross_package_fixture.rs
ts/: package-lock.json  package.json  tsconfig.json
ts/src/: accounts.ts  amount.test.ts  amount.ts  codecs.test.ts  codecs.ts  confirmation.ts  constants.ts  crossPackageFixture.test.ts  discriminator.test.ts  discriminator.ts  ed25519IxIndex.ts  index.ts  labelValueRef.ts  pda.test.ts  pda.ts  programIds.ts  walletKeyring.test.ts  walletKeyring.ts  wrapMessage.test.ts  wrapMessage.ts
