[package]
name = "anoma-pa-solana-client"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Client bindings for the Solana Anoma Protocol Adapter and SPL Token Forwarder"
repository.workspace = true
readme = "../README.md"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
solana-program = "2.1"
anchor-lang = "0.31.1"
bincode = "1.3.3"
borsh = "1.5"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
hkdf = "0.12"
hmac = "0.12"
base64 = "0.22"
bs58 = "0.5"
thiserror = "2.0"
solana-sdk-ids = "2.2"
